--- a/navimeshtest/navimeshtest.csproj
+++ b/navimeshtest/navimeshtest.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AStarathFind4Tri.cs" />
     <Compile Include="MeshNavigation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
